Incremented version and added (empty) ReleaseNotes.
Updated readme and removed NoWarns. These themselves did not seem ReleaseNotes-worthy.

--- a/Identities/Identities.csproj
+++ b/Identities/Identities.csproj
@@ -9,6 +9,7 @@
   <PropertyGroup>
     <!-- NoWarn: 1573=SummariesOnOnlySomeParams -->
     <NoWarn>1573</NoWarn>
+    <ReleaseNotes></ReleaseNotes
     <LangVersion>latest</LangVersion>
     <Nullable>Enable</Nullable>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
