- Now throwing on clock rewind of more than 1 second, instead of risking collisions. - Split Azure implementation into separate project/package. - Added an example console application. - Removed internal ApplicationInstanceIdSourceFactory and simply duplicated the "resolve before startup" line. - Improved some texts and naming.

--- a/Identities.Tests/Identities.Tests.csproj
+++ b/Identities.Tests/Identities.Tests.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Identities.Azure\Identities.Azure.csproj" />
     <ProjectReference Include="..\Identities\Identities.csproj" />
   </ItemGroup>
 
