--- a/Identities/Identities.csproj
+++ b/Identities/Identities.csproj
@@ -16,16 +16,17 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <Version>1.0.0-RC2</Version>
+    <Version>1.0.0-RC6</Version>
     <PackageReleaseNotes></PackageReleaseNotes>
     <Description>
-Provides various tools related to IDs.
+This package provides tools for ID management.
 
-This package features the Fluid ID generator, which generates Flexible, Locally-Unique IDs. A Fluid is intended to replace the combination of auto-increment ID and UUID. It is 64-bit and incremental (i.e. efficient as a primary key) and does not leak the sensitive information that an auto-increment ID does.
+Auto-increment IDs expose sensitive information. UUIDs (also known as GUIDs) are inefficient as primary keys in a database. Having two IDs is silly and cumbersome.
 
-The package also provides PublicIdentities, a set of tools for converting local IDs to public IDs and back. When a Fluid is still considered to leak too much information to be exposed publically, or when using auto-increment IDs, PublicIdentities can help out. This subsystem converts 64-bit (or smaller) IDs into deterministic, reversible public IDs that are indistinguishable from random noise without possession of the configured key. Using the key, public IDs can be converted back to the original IDs. These public IDs can replace UUIDs, without the additional bookkeeping.
-
-Furthermore, this package features various ApplicationInstanceIdSource implementations. These implementations provide a unique ID to each distinct application (or instance thereof) within a chosen bounded context, by using a centralized storage component, such as a SQL database or an Azure Blob Storage Container. The Fluid ID generator relies on this feature to ensure that generated IDs are unique.
+- For a 93-bit UUID replacement that is *efficient as a primary key* and has *virtually no caveats*, use **CompanyUniqueId**.
+- For a 64-bit UUID replacement that is *extremely efficient as a primary key* but *requires dependency registration and a synchronization mechanism*, use **Fluid**.
+- To expose IDs externally in a sensitive environment *where zero metadata can be leaked*, transform them with **PublicIdentities**.
+- To assign a unique ID to each distinct application or instance thereof, use **ApplicationInstanceIdSource**.
     </Description>
     <Copyright>The Architect</Copyright>
     <Company>The Architect</Company>
@@ -33,12 +34,11 @@ Furthermore, this package features various ApplicationInstanceIdSource implement
     <RepositoryUrl>https://github.com/TheArchitectDev/Architect.Identities</RepositoryUrl>
     <RepositoryType>Git</RepositoryType>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
-    <PackageTags>ID, IDs, identity, identities, UUID, GUID, auto-increment, entity, entities</PackageTags>
+    <PackageTags>ID, IDs, identity, identities, Fluid, company-unique, company, locally, unique, generator, generation, IdGenerator, UUID, GUID, auto-increment, primary, key, entity, entities, PublicIdentities, IdGeneratorScope, flexible</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Architect.AmbientContexts" Version="[1.0.0-*, 2.0.0)" />
-    <PackageReference Include="Azure.Storage.Blobs" Version="12.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.0" />
