--- a/Identities/Identities.csproj
+++ b/Identities/Identities.csproj
@@ -21,12 +21,12 @@
     <Description>
 This package provides tools for ID management.
 
-Auto-increment IDs expose sensitive information. UUIDs (also known as GUIDs) are inefficient as primary keys in a database. Having two IDs is silly and cumbersome.
+Auto-increment IDs reveal sensitive information. UUIDs (also known as GUIDs) are inefficient as primary keys in a database. Having two different IDs is cumbersome and counterintuitive.
 
-- For a 93-bit UUID replacement that is *efficient as a primary key* and has *virtually no caveats*, use **CompanyUniqueId**.
+- For a 96-bit UUID replacement that is *efficient as a primary key* and has *virtually no caveats*, use **CompanyUniqueId**.
 - For a 64-bit UUID replacement that is *extremely efficient as a primary key* but *requires dependency registration and a synchronization mechanism*, use **Fluid**.
 - To expose IDs externally in a sensitive environment *where zero metadata can be leaked*, transform them with **PublicIdentities**.
-- To assign a unique ID to each distinct application or instance thereof, use **ApplicationInstanceIdSource**.
+- To assign a unique ID to each distinct application or instance thereof, use an **ApplicationInstanceIdSource**.
     </Description>
     <Copyright>The Architect</Copyright>
     <Company>The Architect</Company>
