--- a/Identities.Azure/Identities.Azure.csproj
+++ b/Identities.Azure/Identities.Azure.csproj
@@ -16,7 +16,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <Version>1.0.0-RC2</Version>
+    <Version>1.0.0-RC3</Version>
     <PackageReleaseNotes></PackageReleaseNotes>
     <Description>
 This package provides Azure-implementations for the Architect.Identities package.
@@ -33,8 +33,8 @@ This package allows Azure blob storage to be used as the synchronization mechani
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Architect.Identities" Version="1.0.0-*" />
-    <PackageReference Include="Azure.Storage.Blobs" Version="12.3.0" />
+    <PackageReference Include="Architect.Identities" Version="[1.0.0-*, 2.0.0)" />
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.4.4" />
   </ItemGroup>
 
   <ItemGroup>
