--- a/Identities.Tests/Identities.Tests.csproj
+++ b/Identities.Tests/Identities.Tests.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Identities.Azure\Identities.Azure.csproj" />
+    <ProjectReference Include="..\Identities.EntityFramework\Identities.EntityFramework.csproj" />
     <ProjectReference Include="..\Identities\Identities.csproj" />
   </ItemGroup>
 
