--- a/Identities.Azure/Identities.Azure.csproj
+++ b/Identities.Azure/Identities.Azure.csproj
@@ -44,4 +44,8 @@ This package allows Azure blob storage to be used as the synchronization mechani
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Identities\Identities.csproj" />
+  </ItemGroup>
+
 </Project>
