--- a/Identities.IntegrationTests/Identities.IntegrationTests.csproj
+++ b/Identities.IntegrationTests/Identities.IntegrationTests.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <AssemblyName>Architect.Identities.Tests</AssemblyName>
-    <RootNamespace>Architect.Identities.Tests</RootNamespace>
+    <AssemblyName>Architect.Identities.IntegrationTests</AssemblyName>
+    <RootNamespace>Architect.Identities.IntegrationTests</RootNamespace>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
@@ -11,13 +11,12 @@
     <PackageReference Include="coverlet.collector" Version="1.3.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.0" />
+    <PackageReference Include="System.Data.SQLite.Core" Version="1.0.113.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Identities.Azure\Identities.Azure.csproj" />
-    <ProjectReference Include="..\Identities.EntityFramework\Identities.EntityFramework.csproj" />
     <ProjectReference Include="..\Identities\Identities.csproj" />
   </ItemGroup>
 
