--- a/Identities/Identities.csproj
+++ b/Identities/Identities.csproj
@@ -16,17 +16,21 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <Version>1.0.0-RC6</Version>
+    <Version>1.0.0-RC10</Version>
     <PackageReleaseNotes></PackageReleaseNotes>
     <Description>
-This package provides tools for ID management.
+Reliable unique ID generation for distributed applications.
 
-Auto-increment IDs reveal sensitive information. UUIDs (also known as GUIDs) are inefficient as primary keys in a database. Having two different IDs is cumbersome and counterintuitive.
+This package provides highly tuned tools for ID generation and management.
 
-- For a 96-bit UUID replacement that is *efficient as a primary key* and has *virtually no caveats*, use **CompanyUniqueId**.
-- For a 64-bit UUID replacement that is *extremely efficient as a primary key* but *requires dependency registration and a synchronization mechanism*, use **Fluid**.
-- To expose IDs externally in a sensitive environment *where zero metadata can be leaked*, transform them with **PublicIdentities**.
-- To assign a unique ID to each distinct application or instance thereof, use an **ApplicationInstanceIdSource**.
+Auto-increment IDs reveal sensitive information. UUIDs (also known as GUIDs) are inefficient as primary keys in a database. Having two different IDs is cumbersome and counterintuitive. We can do better.
+
+- For a 93-bit UUID replacement that is efficient as a primary key and has virtually no caveats, use the DistributedId.
+- For a 64-bit UUID replacement that is extremely efficient as a primary key, use the Fluid.
+- To expose IDs externally in a sensitive environment where zero metadata must be leaked, transform them with PublicIdentities.
+- To assign a unique ID to each distinct application or instance thereof, use an ApplicationInstanceIdSource.
+
+https://github.com/TheArchitectDev/Architect.Identities
     </Description>
     <Copyright>The Architect</Copyright>
     <Company>The Architect</Company>
@@ -34,7 +38,7 @@ Auto-increment IDs reveal sensitive information. UUIDs (also known as GUIDs) are
     <RepositoryUrl>https://github.com/TheArchitectDev/Architect.Identities</RepositoryUrl>
     <RepositoryType>Git</RepositoryType>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
-    <PackageTags>ID, IDs, identity, identities, Fluid, company-unique, company, locally, unique, generator, generation, IdGenerator, UUID, GUID, auto-increment, primary, key, entity, entities, PublicIdentities, IdGeneratorScope, flexible</PackageTags>
+    <PackageTags>ID, IDs, identity, identities, Fluid, distributed, locally, unique, locally-unique, generator, generation, IdGenerator, UUID, GUID, auto-increment, primary, key, entity, entities, PublicIdentities, IdGeneratorScope, flexible</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
