--- a/Identities.Azure/Identities.Azure.csproj
+++ b/Identities.Azure/Identities.Azure.csproj
@@ -16,12 +16,14 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <Version>1.0.0-RC2</Version>
+    <Version>1.0.0-RC5</Version>
     <PackageReleaseNotes></PackageReleaseNotes>
     <Description>
 This package provides Azure-implementations for the Architect.Identities package.
 
 This package allows Azure blob storage to be used as the synchronization mechanism for assigning unique IDs to each application instance.
+
+services.AddIdGenerator(generator => generator.UseAzureBlobStorageContainer(new BlobContainerClient("ConnectionString", "ContainerName")));
     </Description>
     <Copyright>The Architect</Copyright>
     <Company>The Architect</Company>
@@ -33,8 +35,8 @@ This package allows Azure blob storage to be used as the synchronization mechani
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Architect.Identities" Version="1.0.0-*" />
-    <PackageReference Include="Azure.Storage.Blobs" Version="12.3.0" />
+    <PackageReference Include="Architect.Identities" Version="[1.0.0-*, 2.0.0)" />
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.4.4" />
   </ItemGroup>
 
   <ItemGroup>
@@ -42,6 +44,10 @@ This package allows Azure blob storage to be used as the synchronization mechani
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Identities\Identities.csproj" />
   </ItemGroup>
 
 </Project>
