--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,7 @@ steps:
 - task: DotNetCoreCLI@2
   inputs:
     command: 'test'
-    projects: '**.Tests/*.csproj'
+    projects: '**.*Tests/*.csproj'
     publishTestResults: false
 
 - script: dotnet build --configuration $(buildConfiguration)
