Many improvements (see commits). (#12)
* - IIdGenerator.CreateId() now creates a long, whereas CreateUnsignedId() creates a ulong, optimizing for use with Azure.
- Made the Fluid.IntegralValue property private, and the constructors internal, forcing the use of casts instead of having multiple ways to convert back and forth.
- Now allowing conversion from 0 to Fluid, which is identical to default(Fluid).
- Upped Azure.Storage.Blobs dependency version, as it fixed a SAS issue.
- Added more unit tests.

* Removed unused Moq reference.

* - Version 1.0.0.
- Reworked static access: Now using AmbientContext, i.e. IdGeneratorScope.Current.Generator.CreateId() instead of FluidIdGenerator.Default.Create()/Luid.Create().
- Made the (internal) TestDetector use AmbientContext to have control from unit tests. (How meta!)

* 1.0.0-RC2.
- Now depending on AmbientContexts [1.0.0-*, 2.0.0) instead of a specific version.
- Static access to PublicIdentityConverter now uses AmbientContext pattern.
- AesPublicIdentityConverter. Now rejecting length-16 textual input earlier, for correctness.
- Improved some formatting and summaries.
- Added more tests.

* Dummy change.

* Undo dummy change.

* Added the Fluid tag.

* - Now throwing on clock rewind of more than 1 second, instead of risking collisions.
- Split Azure implementation into separate project/package.
- Added an example console application.
- Removed internal ApplicationInstanceIdSourceFactory and simply duplicated the "resolve before startup" line.
- Improved some texts and naming.

* - Added CompanyUniqueId, including a short string representation.
- Set Identities.Examples to IsPackable=False.
- Added some missing tags.
- Improved example application.

* - Fixed a bug in CompanyUniqueIdGenerator, occuring when the clock advanced less than a millisecond.
- Added decimal overloads to PublicIdentities.
- Abstracted away binary structure of decimals.
- OrDefault() methods now return null if d

--- a/Identities.EntityFramework/Identities.EntityFramework.csproj
+++ b/Identities.EntityFramework/Identities.EntityFramework.csproj
@@ -16,21 +16,32 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <Version>1.0.0-RC2</Version>
+    <Version>1.0.0-RC4</Version>
     <PackageReleaseNotes></PackageReleaseNotes>
     <Description>
-This package provides EntityFramework extensions for the Architect.Identities package.
+EntityFramework extensions for the Architect.Identities package.
+
+Use DbContext-based connections for the Fluid ID generator:
+
+public void ConfigureServices(IServiceCollection services)
+{
+  services.AddPooledDbContextFactory&lt;ExampleDbContext&gt;(context => context.UseSqlServer("ConnectionString"));
+  
+  services.AddApplicationInstanceIdSource(source => source.UseSqlServerDbContext&lt;ExampleDbContext&gt;());
+  
+  services.AddIdGenerator(generator => generator.UseFluid());
+}
 
 Easily configure the column type to use for decimal ID columns:
 
 protected override void OnModelCreating(ModelBuilder modelBuilder)
 {
-  modelBuilder.Entity&lt;Order&gt;(entity =>
+  modelBuilder.Entity&lt;Order&gt;(entity =&gt;
   {
-    entity.Property(o => o.Id)
+    entity.Property(o =&gt; o.Id)
       .ValueGeneratedNever();
     
-    entity.HasKey(o => o.Id);
+    entity.HasKey(o =&gt; o.Id);
   });
   
   // Other entities ...
@@ -43,9 +54,9 @@ Or per individual property:
 
 protected override void OnModelCreating(ModelBuilder modelBuilder)
 {
-  modelBuilder.Entity&lt;Order&gt;(entity =>
+  modelBuilder.Entity&lt;Order&gt;(entity =&gt;
   {
-    entity.Property(e => e.Id)
+    entity.Property(e =&gt; e.Id)
       .ValueGeneratedNever()
       .StoreWithDecimalIdPrecision(dbContext: this);
   });
@@ -63,6 +74,7 @@ The extensions in this package special-case SQLite, which requires special treat
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Architect.Identities" Version="[1.0.0-*, 2.0.0)" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.0" />
   </ItemGroup>
@@ -72,6 +84,10 @@ The extensions in this package special-case SQLite, which requires special treat
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Identities\Identities.csproj" />
   </ItemGroup>
 
 </Project>
