--- a/Identities/Identities.csproj
+++ b/Identities/Identities.csproj
@@ -42,7 +42,7 @@ https://github.com/TheArchitectDev/Architect.Identities
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Architect.AmbientContexts" Version="[1.0.0-*, 2.0.0)" />
+    <PackageReference Include="Architect.AmbientContexts" Version="1.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.0" />
