--- a/Identities/Identities.csproj
+++ b/Identities/Identities.csproj
@@ -16,12 +16,10 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <VersionPrefix>1.0.0</VersionPrefix>
+    <VersionPrefix>1.0.1</VersionPrefix>
     <PackageReleaseNotes></PackageReleaseNotes>
     <Description>
-Reliable unique ID generation for distributed applications.
-
-This package provides highly tuned tools for ID generation and management.
+Reliable unique ID generation and management for distributed applications.
 
 Auto-increment IDs reveal sensitive information. UUIDs (also known as GUIDs) are inefficient as primary keys in a database. Having two different IDs is cumbersome and counterintuitive. We can do better.
 
@@ -31,6 +29,11 @@ Auto-increment IDs reveal sensitive information. UUIDs (also known as GUIDs) are
 - To assign a unique ID to each distinct application or instance thereof, use an ApplicationInstanceIdSource.
 
 https://github.com/TheArchitectDev/Architect.Identities
+
+Release notes:
+
+1.0.1:
+- Now using AmbientContexts 1.1.0, for a performance improvement.
     </Description>
     <Copyright>The Architect</Copyright>
     <Company>The Architect</Company>
@@ -42,7 +45,7 @@ https://github.com/TheArchitectDev/Architect.Identities
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Architect.AmbientContexts" Version="1.0.0" />
+    <PackageReference Include="Architect.AmbientContexts" Version="1.1.0-*" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.0" />
