--- a/Identities.EntityFramework/Identities.EntityFramework.csproj
+++ b/Identities.EntityFramework/Identities.EntityFramework.csproj
@@ -4,15 +4,9 @@
 		<TargetFramework>netcoreapp3.1</TargetFramework>
 		<AssemblyName>Architect.Identities.EntityFramework</AssemblyName>
 		<RootNamespace>Architect.Identities.EntityFramework</RootNamespace>
-	</PropertyGroup>
-
-	<PropertyGroup>
-		<!-- NoWarn: 1573=SummariesOnOnlySomeParams -->
-		<!-- NoWarn: 1591=MissingXmlComments -->
-		<NoWarn>1573;1591</NoWarn>
-		<LangVersion>latest</LangVersion>
 		<Nullable>Enable</Nullable>
-		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<LangVersion>9</LangVersion>
+		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 	</PropertyGroup>
 
 	<PropertyGroup>
