--- a/Identities.Tests/Identities.Tests.csproj
+++ b/Identities.Tests/Identities.Tests.csproj
@@ -4,7 +4,8 @@
 		<TargetFramework>net6.0</TargetFramework>
 		<AssemblyName>Architect.Identities.Tests</AssemblyName>
 		<RootNamespace>Architect.Identities.Tests</RootNamespace>
-		<IsPackable>false</IsPackable>
+		<ImplicitUsings>Enable</ImplicitUsings>
+		<IsPackable>False</IsPackable>
 	</PropertyGroup>
 
 	<ItemGroup>
