--- a/Identities.EntityFramework/Identities.EntityFramework.csproj
+++ b/Identities.EntityFramework/Identities.EntityFramework.csproj
@@ -13,6 +13,17 @@
 		<VersionPrefix>1.0.2</VersionPrefix>
 		<PackageReleaseNotes></PackageReleaseNotes>
 		<Description>
+Release notes:
+
+1.0.2:
+- Fixed an incompatibility with EF Core 6.0.0+ (caused by a breaking change in EF itself).
+- Now using AmbientContexts 1.1.1, which fixes extremely rare bugs and improves performance.
+
+1.0.1:
+- Now using AmbientContexts 1.1.0, for a performance improvement.
+
+Description:
+
 EntityFramework extensions for the Architect.Identities package.
 
 Use DbContext-based connections for the Fluid ID generator:
@@ -57,15 +68,6 @@ protected override void OnModelCreating(ModelBuilder modelBuilder)
 }
 
 The extensions in this package special-case SQLite, which requires special treatment.
-
-Release notes:
-
-1.0.2:
-- Fixed an incompatibility with EF Core 6.0.0+ (caused by a breaking change in EF itself).
-- Now using AmbientContexts 1.1.1, which fixes extremely rare bugs and improves performance.
-
-1.0.1:
-- Now using AmbientContexts 1.1.0, for a performance improvement.
 		</Description>
 		<Copyright>The Architect</Copyright>
 		<Company>The Architect</Company>
